# GenAi-backend

./: .gitignore  Makefile  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: server.py
app/dependencies/: __init__.py  users.py
app/models/: __init__.py  base.py  financial_info.py  loans.py  products.py  users.py
app/repositories/: ekyc.py  products.py  users.py
app/schemas/: ekyc.py  products.py  users.py
app/views/: __init__.py  beat.py  ekyc.py  products.py  users.py
core/db/: __init__.py  base.py
core/db/migrations/: env.py
core/db/migrations/versions/: 0115318d3c8a_add_new_tables.py  c84be1641910_initial_setup.py
core/middlewares/: exception.py
core/settings/: base.py
utils/: __init__.py  http.py
