[tool.poetry]
name = "genai-backend"
version = "0.1.0"
description = ""
authors = ["yousef aldabbas <yousef.aldabbas@ahli.com>"]
readme = "README.md"
packages = [{include = "genai_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.2"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
